# docs/swagger.yaml
@@ -10,11 +10,8 @@ definitions:
         $ref: '#/definitions/types.CardFront'
       id:
         type: string
-      links:
-        description: Added field for links
-        items:
-          type: string
-        type: array
+      link:
+        type: string
     type: object
   types.CardBack:
     properties:
