# internal/domain/types/card.go
@@ -5,7 +5,7 @@ type Card struct {
 	DeckID string    `gorm:"not null" json:"deck_id"`
 	Front  CardFront `gorm:"embedded;embeddedPrefix:front_" json:"front"`
 	Back   CardBack  `gorm:"embedded;embeddedPrefix:back_" json:"back"`
-	Links  []string  `gorm:"type:text[]" json:"links"` // Added field for links
+	Link   string    `gorm:"type:text" json:"link"`
 }
 
 type CardFront struct {
